# torch_app_sample

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
scripts/: create_env_file.sh
